# messenger-app

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: auto-release.yml  build-desktop.yml
backend/: .env.example  Dockerfile  drizzle.config.ts  package.json  tsconfig.json
backend/src/: index.ts  main.ts
backend/src/infrastructure/bullmq/: bullmq-job-queue.ts  connection.ts  types.ts  worker-registry.ts
backend/src/infrastructure/di/: container.ts
backend/src/infrastructure/event-bus/: broadcast.subscriber.ts  event-bus.ts
backend/src/infrastructure/pg/: client.ts  model.ts  schema.ts  utils.ts
backend/src/infrastructure/redis/: cache.service.ts  client.ts
backend/src/infrastructure/scylla/: client.ts  migrator.ts
backend/src/shared/: errors.ts  logger.ts
backend/src/transport/: auth.guard.ts  error-mapper.ts  http.server.ts  rate-limit.ts  ws.connection-manager.ts  ws.gateway.ts  ws.router.ts  ws.types.ts
frontend/: .env.example  Caddyfile  Dockerfile  biome.json  components.json  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: manifest.json
frontend/scripts/: generate-icons.mjs
frontend/src/: emoji-mart.d.ts  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json  mobile.json
frontend/src-tauri/icons/: generate.sh
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/app/: App.tsx  AuthGuard.tsx  EdenTest.tsx  GuestGuard.tsx  router.tsx
frontend/src/features/: index.ts
frontend/src/widgets/: index.ts
(+212 files in other folders)
